--- a/conf/application.conf
+++ b/conf/application.conf
@@ -359,9 +359,9 @@ db {
  #default.jndiName=DefaultDS
  
   default.driver=com.mysql.jdbc.Driver
- default.url="jdbc:mysql://bzrrmykuu-mysql.services.clever-cloud.com:3306/bzrrmykuu"
- default.username=uu7ylswhf38yooxz
- default.password=ZPBa8ZuWjks9ewze1kn
+ default.url="jdbc:mysql://beppwcdls-mysql.services.clever-cloud.com:3306/beppwcdls"
+ default.username=uzuypewtcwmcryij
+ default.password=3y95StHxOV9b3Rqye0X
  default.jndiName=DefaultDS
 
 }
@@ -371,12 +371,12 @@ jpa.default=defaultPersistenceUnit
 play.http.filters = "filters.Filters"
 play.filters.cors {
   pathPrefixes = ["/"]
-  allowedOrigins = ["http://localhost:9000","http://localhost:8100","http://localhost:8888","http://192.168.43.64:9000","https://mysterious-stream-99573.herokuapp.com"]
+  allowedOrigins = ["http://localhost:9000","http://localhost:8100","http://localhost:8888","http://192.168.43.64:9000","https://mysterious-stream-99573.herokuapp.com","https://serene-plains-66168.herokuapp.com/"]
   allowedHttpMethods = ["GET", "POST"]
   allowedHttpHeaders = ["Accept"]
   preflightMaxAge = 3 days
 }
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost:8100", "localhost:9000", "192.168.43.64:9000", "mysterious-stream-99573.herokuapp.com"]
+  allowed = ["localhost:8100", "localhost:9000", "192.168.43.64:9000", "mysterious-stream-99573.herokuapp.com","https://serene-plains-66168.herokuapp.com/"]
 }
