--- a/conf/application.conf
+++ b/conf/application.conf
@@ -372,14 +372,13 @@ play.http.filters = "filters.Filters"
 play.filters.cors {
   pathPrefixes = ["/"]
   #allowedOrigins = ["http://localhost:9000","http://localhost:8100","http://localhost:8888","http://192.168.43.64:9000","https://mysterious-stream-99573.herokuapp.com","https://serene-plains-66168.herokuapp.com"]
+  allowedHttpMethods = ["GET", "POST"]
+  allowedHttpHeaders = ["Accept"]
   allowedOrigins = null
-  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
-  #allowedHttpHeaders = ["Accept"]
-  allowedHttpHeaders = null
   preflightMaxAge = 3 days
 }
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
   #allowed = ["localhost:8100", "localhost:9000", "192.168.43.64:9000", "mysterious-stream-99573.herokuapp.com","serene-plains-66168.herokuapp.com"]
-	allowed = null
+  allowed = null
 }
