--- a/conf/application.conf
+++ b/conf/application.conf
@@ -371,7 +371,7 @@ jpa.default=defaultPersistenceUnit
 play.http.filters = "filters.Filters"
 play.filters.cors {
   pathPrefixes = ["/"]
-  allowedOrigins = ["http://localhost:9000","http://localhost:8100","http://localhost:8888","http://192.168.43.64:9000","https://mysterious-stream-99573.herokuapp.com","https://serene-plains-66168.herokuapp.com"]
+  allowedOrigins = ["http://localhost:9000","http://localhost:8100","http://localhost:8888","http://192.168.43.64:9000","https://peaceful-mesa-79797.herokuapp.com"]
   allowedHttpMethods = ["GET", "POST"]
   allowedHttpHeaders = ["Accept"]
   #allowedOrigins = null
@@ -379,6 +379,6 @@ play.filters.cors {
 }
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost:8100", "localhost:9000", "192.168.43.64:9000", "mysterious-stream-99573.herokuapp.com","serene-plains-66168.herokuapp.com"]
+  allowed = ["localhost:8100", "localhost:9000", "192.168.43.64:9000", "peaceful-mesa-79797.herokuapp.com"]
   #allowed = null
 }
